--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the Main Page TCS</h1>
+        <h1>Welcome to the company's product sales system</h1>
         <p class="description">This is a stylish and trendy start page.</p>
         <p>Please click the button below to login:</p>
         <a th:href="@{/login}" class="btn">Login</a>
