--- a/src/main/resources/static/css/warehouse.css
+++ b/src/main/resources/static/css/warehouse.css
@@ -1,4 +1,7 @@
 /* Общие стили для формы и полей ввода */
+body {
+    background: linear-gradient(to bottom, #ffffff, #4CAF50);
+}
 .form-group {
     margin-bottom: 20px;
 }
@@ -16,7 +19,7 @@ input[type="number"] {
 }
 .btn {
     padding: 10px 20px;
-    background-color: #007bff;
+    background-color: darkgrey;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -35,7 +38,7 @@ h1 {
 }
 
 .btn-logout {
-    background-color: #ff0000;
+    background-color: #007bff;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -44,7 +47,7 @@ h1 {
 }
 
 .btn-logout:hover {
-    background-color: #cc0000;
+    background-color: #007bff;
 }
 table {
     border-collapse: collapse;
